Sat Oct  1 01:46:51 2005  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb (OpenURI.open_loop): prohibit multiple proxy
	  options.

Thu Sep 29 10:26:18 2005  Tanaka Akira  <akr@m17n.org>

	* ext/dl/cptr.c (rb_dlptr_s_to_ptr): abolish sizeof(FILE).
	  [ruby-dev:27317]

Thu Sep 29 10:15:14 2005  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb (:proxy_http_basic_authentication): new option.

Thu Sep 29 07:22:05 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_f_send): underscores need to be escaped.
	  fixed by Doug Kearns.  [ruby-core:06053]

Thu Sep 29 00:57:35 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ev_const_get), variable.c (rb_const_get_0): retry only when
	  autoload succeeded.

	* variable.c (rb_autoload_load): now return true if autoload
	  succeeded.  fixed: [ruby-dev:27331]

Wed Sep 28 23:40:04 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_stat_inspect): constified.

Wed Sep 28 15:12:28 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/cgi.rb (WEBrick::CGI#start): req.query_string should
	  refer the value of QUERY_STRING. [ruby-list:41186]

	* lib/webrick/httprequest.rb (WEBrick::HTTPRequest#query_string=):
	  add new method.

Wed Sep 28 10:45:44 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c: cannot compile with Tcl/Tk8.0.x [ruby-dev:27335].

Wed Sep 28 07:56:52 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/yaml/basenode.rb (YAML::BaseNode::match_segment): fix typo.
	  [ruby-dev:27237], [ruby-core:05854]

	* lib/yaml/tag.rb (Module#yaml_as): suppress warnings.

	* lib/yaml/types.rb (YAML::PrivateType, YAML::DomainType): ditto.

Wed Sep 28 03:16:41 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* rubysig.h: fixed build problem with --enable-pthread on platforms
	  which don't have setitimer().

Mon Sep 26 20:59:28 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* parse.y: changed to ANSI function style.

Sun Sep 25 12:02:04 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>
