@@ -108,7 +108,6 @@ VALUE rb_big_and(VALUE, VALUE);
 VALUE rb_big_or(VALUE, VALUE);
 VALUE rb_big_xor(VALUE, VALUE);
 VALUE rb_big_lshift(VALUE, VALUE);
-VALUE rb_big_rand(VALUE, double*);
 /* class.c */
 VALUE rb_class_boot(VALUE);
 VALUE rb_class_new(VALUE);
